<resources>
    <string name="app_name">MEND</string>
    <string name="title_slider_1">Find out about your child mental care in a click</string>
    <string name="subtitle_slider_1">Know more about your child’s health, watch out for the signs</string>
    <string name="title_slider_2">We will help you find the abnormality</string>
    <string name="subtitle_slider_2">The sooner you find out, the faster it will be handled</string>
    <string name="title_slider_3">Simply to use and Accurate Diagnosis</string>
    <string name="subtitle_slider_3"> Answer the question, see the result and you can provide the best care for your child </string>
    <string name="slider_next">Next</string>
    <string name="slider_prev">Prev</string>
    <string name="slider_skip">Skip</string>
    <string name="title_login">Welcome Parents,</string>
    <string name="subtitle_login">It’s nice to see you, please sign in to continue!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="title_register">Create Account</string>
    <string name="subtitle_register">Fill the blank input below here to sign up.</string>
    <string name="register_intro">Don’t have an account? <b>Sign Up</b></string>
    <string name="login_intro">Already have an account? <b>Sign In</b></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_phone_number">Enter your phone number</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome,</string>
    <string name="card_title">Remember to check your child mental care with us</string>
    <string name="card_subtitle">Protect your child’s future</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="diagnose">Diagnose</string>
    <string name="history">History</string>
    <string name="latest_articles">Latest Articles</string>
    <string name="wiki">Wiki</string>
    <string name="articles">Articles</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="hint_update_password">Enter your new password (Optional)</string>
    <string name="title_intro_diagnose">First, tell us the detail of your child</string>
    <string name="subtitle_diagnose">Takes less than 2 minutes to fill out the information needed to diagnose.</string>
    <string name="full_name">Full Name</string>
    <string name="hint_kids_name">Enter your kid\'s name</string>
    <string name="age">Age</string>
    <string name="hint_age">Enter your kid\'s age</string>
    <string name="cancel">Cancel</string>
    <string name="next_step">Next Step</string>
    <string name="diagnose_question">Diagnose Question</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="question_number">Question %1$d/%2$d</string>
    <string name="submit_diagnose">Submit</string>
    <string name="diagnostic_results">Diagnostic Results</string>
    <string name="disease_possibility">Disease Possibility</string>
    <string name="consult">Consult</string>
    <string name="back_to_home">Back To Home</string>
    <string name="name_age">%1$s, %2$s years</string>
    <string name="newest">Newest</string>
    <string name="longest">Longest</string>
    <string name="by_name">By Name</string>
    <string name="default_notification_channel_id">1</string>
    <string name="news">News</string>
    <string name="breaking_news">Breaking News</string>
    <string name="all">All</string>
    <string name="detail">Detail</string>
    <string name="detail_wiki">Detail Wiki</string>
    <string name="no_data">No Data</string>
    <string name="view_all">View All</string>
    <string name="read_this">Read This</string>
    <string name="hint_general">Type something here…</string>
    <string name="app_title"><b>M</b>entality <b>D</b>isorders <b>D</b>etection for Chil<b>d</b></string>
    <string name="by_divergent_team">By Divergent Team</string>
    <string name="version_txt">Version %1$s</string>
</resources>