<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.andriawan.divergent_mobile_apps.ui.diagnose.SharedDiagnoseViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/custom_color_background"
        tools:context=".ui.diagnose.FormIntroFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_intro_top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_intro_diagnose"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_semibold"
                android:textColor="@color/custom_color_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/manrope_regular"
                android:textColor="@color/custom_color_grey"
                android:textSize="14sp"
                android:text="@string/subtitle_diagnose" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_bold"
                    android:textColor="@color/custom_color_grey"
                    android:layout_marginBottom="10dp"
                    android:text="@string/full_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:boxBackgroundColor="@color/custom_color_background"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxStrokeColor="@color/custom_color_purple"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true"
                    errorText="@{viewModel.errorForm.name}"
                    app:errorTextAppearance="@style/TextErrorAppearance"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_kids_name"
                        android:fontFamily="@font/manrope_regular"
                        android:inputType="text"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_bold"
                    android:textColor="@color/custom_color_grey"
                    android:layout_marginBottom="10dp"
                    android:text="@string/age" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:boxBackgroundColor="@color/custom_color_background"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxStrokeColor="@color/custom_color_purple"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true"
                    errorText="@{viewModel.errorForm.age}"
                    app:errorTextAppearance="@style/TextErrorAppearance"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtAge"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_age"
                        android:fontFamily="@font/manrope_regular"
                        android:inputType="number"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="60dp"
                    app:elevation="0dp"
                    android:layout_marginEnd="80dp"
                    android:text="@string/cancel"
                    android:onClick="@{()->viewModel.cancel()}"
                    android:textColor="@color/custom_color_purple"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    app:backgroundTint="@color/custom_color_background" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="60dp"
                    app:elevation="0dp"
                    android:text="@string/next_step"
                    android:layout_marginStart="60dp"
                    app:cornerRadius="8dp"
                    android:onClick="@{()->viewModel.onNextIntro(edtName.getText().toString, edtAge.getText().toString)}"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/custom_color_purple" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</layout>