<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="com.andriawan.divergent_mobile_apps.ui.login.LoginListener" />
        <variable
            name="viewModel"
            type="com.andriawan.divergent_mobile_apps.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/custom_color_background"
        tools:context=".ui.login.LoginFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="0.75">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:src="@drawable/login_image" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_login"
                        android:textSize="16sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/custom_color_grey"
                        android:fontFamily="@font/manrope_bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/subtitle_text_color"
                        android:fontFamily="@font/manrope_light"
                        android:text="@string/subtitle_login" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/custom_color_grey"
                        android:layout_marginBottom="10dp"
                        android:text="@string/email" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:boxBackgroundColor="@color/custom_color_background"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxStrokeColor="@color/custom_color_purple"
                        app:boxBackgroundMode="outline"
                        app:errorEnabled="true"
                        errorText="@{viewModel.errorForm.email}"
                        app:errorTextAppearance="@style/TextErrorAppearance"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:hint="@string/hint_email"
                            android:fontFamily="@font/manrope_regular"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:imeOptions="actionNext"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/custom_color_grey"
                        android:layout_marginBottom="10dp"
                        android:text="@string/password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:boxBackgroundColor="@color/custom_color_background"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/custom_color_light_purple"
                        app:boxStrokeColor="@color/custom_color_purple"
                        app:errorEnabled="true"
                        errorText="@{viewModel.errorForm.password}"
                        app:errorTextAppearance="@style/TextErrorAppearance"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:hint="@string/hint_password"
                            android:fontFamily="@font/manrope_regular"
                            android:inputType="textPassword"
                            android:imeOptions="actionDone"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signIn_materialButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:backgroundTint="@color/custom_color_purple"
                    app:cornerRadius="10dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="14sp"
                    android:onClick="@{()->viewModel.onSubmitClicked(edtEmail.getText().toString(), edtPassword.getText().toString())}"
                    android:fontFamily="@font/manrope_semibold"
                    app:elevation="4dp"
                    android:text="@string/sign_in" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/custom_color_purple"
                    android:fontFamily="@font/manrope_regular"
                    android:textSize="12sp"
                    android:onClick="@{()->listener.toRegisterClicked()}"
                    android:layout_marginBottom="30dp"
                    android:text="@string/register_intro" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>