<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.andriawan.divergent_mobile_apps.ui.diagnose.SharedDiagnoseViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/custom_color_purple"
            android:fontFamily="@font/manrope_semibold"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            tools:text="Question 1/10" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/custom_color_grey"
            android:textSize="16sp"
            android:fontFamily="@font/manrope_semibold"
            tools:text="Does your child have difficulty controlling emotions, such as irritability and difficulty controlling?"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/yes"
            android:fontFamily="@font/manrope_semibold"
            android:textColor="@color/custom_color_grey"
            app:icon="@drawable/ic_check"
            app:backgroundTint="@color/white"
            app:iconGravity="textEnd"
            app:cornerRadius="16dp"
            app:elevation="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/no"
            android:textColor="@color/custom_color_grey"
            android:fontFamily="@font/manrope_semibold"
            app:icon="@drawable/ic_check"
            app:backgroundTint="@color/white"
            app:iconGravity="textEnd"
            app:cornerRadius="16dp"
            app:elevation="4dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="60dp"
                app:elevation="0dp"
                android:onClick="@{()->viewModel.cancel()}"
                android:layout_marginEnd="40dp"
                android:text="@string/cancel"
                android:textColor="@color/custom_color_purple"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                app:backgroundTint="@color/custom_color_background" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="60dp"
                app:elevation="0dp"
                android:text="@string/next"
                android:layout_marginStart="40dp"
                app:cornerRadius="8dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/custom_color_purple" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>